--- a/articles_6.html
+++ b/articles_6.html
@@ -181,6 +181,32 @@
                 <a href="articles_6.html" class="btn">read more</a>
             </div>
         </div>
+        <div class="blog shadow">
+            <div class="image">
+                <img src="images/article_7.jpg" alt="">
+                <h3><i class="fas fa-heart"></i></h3>
+            </div>
+            <div class="content">
+                <h3>Educational Outreach at Hain Junior High School</h3>
+                <p>An educational visit to sensitize learners on COMFED's
+                    mission to support girl-child education as well as motivate learners.
+                </p>
+                <a href="articles_7.html" class="btn">read more</a>
+            </div>
+        </div>
+        <div class="blog shadow">
+            <div class="image">
+                <img src="images/article_8.jpg" alt="">
+                <h3><i class="fas fa-heart"></i></h3>
+            </div>
+            <div class="content">
+                <h3>Visit to Nindo-Waala Community</h3>
+                <p>We engaged in meaningful discussions on sexual and reproductive health and rights, 
+                    empowering both young women and men with valuable knowledge.
+                </p>
+                <a href="articles_8.html" class="btn">read more</a>
+            </div>
+        </div>
         </div>
     </section>
 
