--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <img src="images/team7.jpg" alt="">
                 <div class="content">
                     <h3>Tomle P. Thea</h3>
-                    <p>Communication Officer</p>
+                    <p>Logistics Coordinator</p>
                     <a href="our_team.html#communication" class="btn2">read more</a>
                 </div>
             </div>
@@ -184,7 +184,7 @@
                 <img src="images/team8.jpg" alt="">
                 <div class="content">
                     <h3>Issah D. Makbul</h3>
-                    <p>Social Media Manager</p>
+                    <p>Media and Communication Lead</p>
                     <a href="our_team.html#social_media" class="btn2">read more</a>
                 </div>
             </div>
@@ -285,8 +285,8 @@
                 <img src="images/pricing5.png" alt="">
                 <h3>Digital Skills training</h3>
              
-                <p>Organizing skills training workshops for young adults who aspire to 
-                    make a decent living. 
+                <p>Organizing skills training workshops for young people who aspire to 
+                    make decent living. 
                 </p>
             </div>
 
@@ -403,7 +403,7 @@
 
         <div class="ftbox box-orange">
             <h2 class="box-orange">Fun, Games, Christmas Parties etc</h2>
-            <p>All these to entertain and make our members and to create room for socialization</p>
+            <p>We organize these activities to entertain our members and to create room for socialization</p>
             <img src="images/icon-supervisor.svg" alt="Supervisor">
         </div>
     </div>
@@ -480,6 +480,32 @@
                     Drafting a perfect CV, Entrepreneurship, Leadership among others.
                 </p>
                 <a href="articles_6.html" class="btn">read more</a>
+            </div>
+        </div>
+        <div class="blog shadow">
+            <div class="image">
+                <img src="images/article_7.jpg" alt="">
+                <h3><i class="fas fa-heart"></i></h3>
+            </div>
+            <div class="content">
+                <h3>Educational Outreach at Hain Junior High School</h3>
+                <p>An educational visit to sensitize learners on COMFED's
+                    mission to support girl-child education as well as motivate learners.
+                </p>
+                <a href="articles_7.html" class="btn">read more</a>
+            </div>
+        </div>
+        <div class="blog shadow">
+            <div class="image">
+                <img src="images/article_8.jpg" alt="">
+                <h3><i class="fas fa-heart"></i></h3>
+            </div>
+            <div class="content">
+                <h3>Visit to Nindo-Waala Community</h3>
+                <p>We engaged in meaningful discussions on sexual and reproductive health and rights, 
+                    empowering both young women and men with valuable knowledge.
+                </p>
+                <a href="articles_8.html" class="btn">read more</a>
             </div>
         </div>
     </div>
