--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
             </div>
             <div class="content">
                 <h3>Educational Outreach at Hain Junior High School</h3>
-                <p>An educational visit to sensitize learners on COMFED's
-                    mission to support girl-child education as well as motivate learners.
+                <p>An educational visit to sensitize learners on The WillMa Youth Club's 
+                    mission to support youth empowerment and education as well as motivate learners.
                 </p>
                 <a href="articles_7.html" class="btn">read more</a>
             </div>
