--- a/articles_7.html
+++ b/articles_7.html
@@ -85,8 +85,8 @@
                 </p><br>
                 
                 <P>
-                    #InspiringYouth#EducationForAll#EducationalOutreach#Empowerment#FutureLeaders#TheWillMaYouthClub
-                    #IgnitingABrighterFuture
+                    #InspiringYouth#EducationForAll#EducationalOutreach <br> #Empowerment#FutureLeaders#TheWillMaYouthClub
+                    <br> #IgnitingABrighterFuture
                 </P>
             </div>
             <div class="writer">
