--- a/our_team.html
+++ b/our_team.html
@@ -63,7 +63,7 @@
                 <div class="abcontent">
                     <h3>Founder and President</h3>
                     <p>
-                        Josephine Naab Pollu is a Nuurse graduate. she is Currently 
+                        Josephine Naab Pollu is a Nurse graduate. she is Currently 
                         working as a learner facilitator at CAMFED Ghana and a volunteer 
                         preceptor @St.Joseph Nursing Training College,Jirapa. she is an 
                         ambitious and a social driven personality who is passionate about 
@@ -476,7 +476,7 @@
                 <a href="tel:" class="links"><i class="fas fa-phone"></i> +233534928634</a>
                 <a href="tel:" class="links"><i class="fas fa-phone"></i> +233506274042</a>
                 <a href="#" class="links"><i class="fas fa-envelope"></i> thewillmayouthclub@gmail.com</a>
-                <a href="#" class="links"><i class="fas fa-map-marker-alt"></i> Babile, Upper West Region</a>
+                <a href="#" class="links"><i class="fas fa-map-marker-alt"></i> Wa, Upper West Region</a>
             </div>
 
             <div class="box">
