--- a/articles_2.html
+++ b/articles_2.html
@@ -263,7 +263,7 @@
                 <a href="tel:" class="links"><i class="fas fa-phone"></i> +233534928634</a>
                 <a href="tel:" class="links"><i class="fas fa-phone"></i> +233506274042</a>
                 <a href="#" class="links"><i class="fas fa-envelope"></i> thewillmayouthclub@gmail.com</a>
-                <a href="#" class="links"><i class="fas fa-map-marker-alt"></i> Babile, Upper West Region</a>
+                <a href="#" class="links"><i class="fas fa-map-marker-alt"></i> Wa, Upper West Region</a>
             </div>
 
             <div class="box">
